@@ -4,5 +4,15 @@ GT_LocaleManager.locales["frFR"] = {
     ["open"]="Ouvrir",
     ["options"]="les options",
     ["optionspanel.localelabel"]="Langue",
+
+    ["mainframe.tabs.members"]="Membres",
+    ["mainframe.tabs.bank"]="Banque",
+    ["mainframe.tabs.admin"]="Admin",
+
     ["memberdetailframe.rerollframe.sfcheckbox"]="Autonome",
+
+    ["addrerollpopup.title"]="Ajout d'un reroll à %s",
+
+    ["adminpanel.bankcharlabel"]="Banques de guilde",
+    ["addBankCharPopup.title"]="Ajout d'une banque de guilde",
 }
